adding form functionality, starting implementing portfolio section

--- a/index.html
+++ b/index.html
@@ -5,119 +5,125 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Will Rankin</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
 
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/squaresuit.jpeg" alt="" /></a>
-					<h1><strong>I am Will Rankin</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
-				</div>
+<head>
+	<title>Will Rankin</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
+
+<body class="is-preload">
+
+	<!-- Header -->
+	<header id="header">
+		<div class="inner">
+			<a href="#" class="image avatar"><img src="images/squaresuit.jpeg" alt="" /></a>
+			<h1><strong>I am Will Rankin</strong>, <br />
+				Full-Stack Developer, <br/>
+				Teacher, Explorer<br />
+		</div>
+	</header>
+
+	<!-- Main -->
+	<div id="main">
+
+		<!-- One -->
+		<section id="one">
+			<header class="major">
+				<h2>Software developer turned traveler, <br>
+					eager to return to coding and start building.</h2>
 			</header>
+			<p>Proficient in Object-Oriented Programming, and able to take high-level instructions and deliver results.
+				Strong attention to detail, strong verbal and written communication skills, and works well in both team
+				and independent environments.</p>
+			<ul class="actions">
+				<li><a href="assets/WillRankin_Resume.pdf" class="button" download>
+					<i class="fas fa-file-pdf fa-sm"></i>
+					&nbsp;
+				   Resume</a></li>
+			</ul>
+		</section>
 
-		<!-- Main -->
-			<div id="main">
+		<!-- Two -->
+		<section id="two">
+			<h2>Recent Work</h2>
+			<div class="row">
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="https://funway.co.kr" class="image fit thumb" target="_blank"><img src="images/funway.png" alt=""/></a>
+					<h3>funway.co.kr</h3>
+					<p> Designed and created a website using a full-service website builder.</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/02.jpg" class="image fit thumb" target="_blank"><img src="images/thumbs/02.jpg" alt="" /></a>
+					<h3>Ultricies lacinia interdum</h3>
+					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/03.jpg" class="image fit thumb" target="_blank"><img src="images/thumbs/03.jpg" alt="" /></a>
+					<h3>Tortor metus commodo</h3>
+					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/04.jpg" class="image fit thumb" target="_blank"><img src="images/thumbs/04.jpg" alt="" /></a>
+					<h3>Quam neque phasellus</h3>
+					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/05.jpg" class="image fit thumb" target="_blank"><img src="images/thumbs/05.jpg" alt="" /></a>
+					<h3>Nunc enim commodo aliquet</h3>
+					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/06.jpg" class="image fit thumb" target="_blank"><img src="images/thumbs/06.jpg" alt="" /></a>
+					<h3>Risus ornare lacinia</h3>
+					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+				</article>
+			</div>
+			<ul class="actions">
+				<li><a href="#" class="button">Full Portfolio</a></li>
+			</ul>
+		</section>
 
-				<!-- One -->
-					<section id="one">
-						<header class="major">
-							<h2>Software developer turned traveler, <br>
-								 eager to return to coding and start building.</h2>
-						</header>
-						<p>Proficient in Object-Oriented Programming, and able to take high-level instructions and deliver results. Strong attention to detail, strong verbal and written communication skills, and works well in both team and independent environments.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
-					</section>
-
-				<!-- Two -->
-					<section id="two">
-						<h2>Recent Work</h2>
-						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+		<!-- Three -->
+		<section id="three">
+			<h2>Get In Touch</h2>
+			<p>Shoot me an email, or you can use the form below if your feeling fancy.</p>
+			<div class="row">
+				<div class="col-8 col-12-small">
+					<form method="post" id="contact-form">
+						<div class="row gtr-uniform gtr-50">
+							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name"
+									placeholder="Name" /></div>
+							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email"
+									placeholder="Email" /></div>
+							<div class="col-12"><textarea name="message" id="message" placeholder="Message"
+									rows="4"></textarea></div>
 						</div>
+						<br>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><input id="submit-button" type="submit" value="Send Message" /></li>
 						</ul>
-					</section>
+					</form>
+					
+				</div>
+				<div class="col-4 col-12-small">
+					<ul class="labeled-icons">
+						<li>
+							<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
+							Seoul, South Korea<br />
+						</li>
+						<li>
+							<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
+							<a href="mailto:wrankin1101@gmail.com">wrankin1101@gmail.com</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
 
-				<!-- Three -->
-					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
-						<div class="row">
-							<div class="col-8 col-12-small">
-								<form method="post" action="#">
-									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-									</div>
-								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div>
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
-									</li>
-									<li>
-										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
-									</li>
-									<li>
-										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</section>
-
-				<!-- Four -->
-				<!--
+		<!-- Four -->
+		<!--
 					<section id="four">
 						<h2>Elements</h2>
 
@@ -434,30 +440,61 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</section>
 				-->
 
-			</div>
+	</div>
 
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="inner">
+			<ul class="icons">
+				<li><a href="https://www.linkedin.com/in/will-rankn" class="icon brands fa-linkedin" target="_blank"><span
+					class="label">Linkedin</span></a></li>
+				<li><a href="https://github.com/wrankin1101" class="icon brands fa-github" target="_blank"><span
+							class="label">Github</span></a></li>
+				<li><a href="mailto:wrankin1101@gmail.com" class="icon solid fa-envelope" target="_blank"><span
+							class="label">Email</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
+	</footer>
+	<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+	<script>
+	  (function() {
+		emailjs.init("_hi0eg09Dya9qi5rF"); // Replace with your public key
+  
+		const contactForm = document.getElementById("contact-form");
+		const submitButton = document.getElementById("submit-button");
+  
+		contactForm.addEventListener("submit", function(event) {
+		  event.preventDefault();
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		  // Disable the submit button
+		  submitButton.setAttribute("disabled", "true");
+		  
+		  emailjs.sendForm("service_67u8idz", "template_nxeee59", contactForm)
+			.then(function(response) {
+			  console.log("Email sent successfully:", response);
+			  alert("Email sent successfully!");
+			}, function(error) {
+			  console.error("Error sending email:", error);
+			  alert("Error sending email.");
+			})
+			.finally(function() {
+            	// Re-enable the submit button
+            	submitButton.removeAttribute("disabled");
+          	});
+		});
+	  })();
+	</script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.poptrox.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
