--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png">
 </head>
 
 <body class="is-preload">
