Finished up preliminary portfolio

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="#" class="image avatar"><img src="images/squaresuit.jpeg" alt="" /></a>
+			<div class="image avatar"><img src="images/squaresuit.jpeg" alt="" /></div>
 			<h1><strong>I am Will Rankin</strong>, <br />
 				Full-Stack Developer, <br/>
 				Teacher, Explorer<br />
@@ -51,39 +51,48 @@
 			<h2>Recent Work</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="https://funway.co.kr" class="image fit thumb" target="_blank"><img src="images/funway.png" alt=""/></a>
-					<h3>funway.co.kr</h3>
-					<p> Designed and created a website using a full-service website builder.</p>
+					<a href="https://funway.co.kr" class="image fit thumb" target="_blank"><img src="images/recent_work/funway.png" alt="Funway"/></a>
+					<h3>English Academy Website</h3>
+					<p>
+						Worked with business owner to design and create a website using a full-service builder. This led to an increase in recruitment. 
+					</p>
+					<h3>Technology Used</h3>
+					<p>
+						<a href="https://creatorlink.com" target="_blank">CreatorLink</a> |  HTML  |  CSS
+					</p>
+					
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/fulls/02.jpg" class="image fit thumb" target="_blank"><img src="images/thumbs/02.jpg" alt="" /></a>
-					<h3>Ultricies lacinia interdum</h3>
-					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+					<a href="https://www.funwaycity.com/" class="image fit thumb" target="_blank"><img src="images/recent_work/funwaycity2.png" alt="Funway City" /></a>
+					<h3>English Academy Student Dashboard</h3>
+					<p>Utilized Wix and Wix Velo to create a dashboard for students and parents to track progress in an intuitive responsive design.</p>
+					<h3>Technology Used</h3>
+					<p>
+						<a href="https://wix.com" target="_blank">Wix</a> | Wix Velo | Javascript | HTML  |  CSS
+					</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/fulls/03.jpg" class="image fit thumb" target="_blank"><img src="images/thumbs/03.jpg" alt="" /></a>
-					<h3>Tortor metus commodo</h3>
-					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+					<a href="https://storage.googleapis.com/commentwriter/index.html" class="image fit thumb" target="_blank"><img src="images/recent_work/commentwriter.png" alt="Comment Writer" /></a>
+					<h3>Student Comment Writer</h3>
+					<p>Created a simple comment writing app (mostly out of frustration) to increase quarterly reporting speed for teachers by up to 50%</p>
+					<h3>Technology Used</h3>
+					<p>
+						jQuery | Bootstrap | <a href="https://cloud.google.com" target="_blank">Google Cloud</a> | HTML  |  CSS
+					</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/fulls/04.jpg" class="image fit thumb" target="_blank"><img src="images/thumbs/04.jpg" alt="" /></a>
-					<h3>Quam neque phasellus</h3>
-					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/fulls/05.jpg" class="image fit thumb" target="_blank"><img src="images/thumbs/05.jpg" alt="" /></a>
-					<h3>Nunc enim commodo aliquet</h3>
-					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/fulls/06.jpg" class="image fit thumb" target="_blank"><img src="images/thumbs/06.jpg" alt="" /></a>
-					<h3>Risus ornare lacinia</h3>
-					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+					<a href="https://www.oemheaters.com/configurators/sr/config.aspx" class="image fit thumb" target="_blank"><img src="images/recent_work/oemheaters.png" alt="OEM Heaters" /></a>
+					<h3>Custom Product Creator App</h3>
+					<p>Created jQuery apps that allowed users to create custom products, which increased sales and created leads.</p>
+					<h3>Technology Used</h3>
+					<p>
+						jQuery | jQueryUI | HTML | CSS
+					</p>
 				</article>
 			</div>
-			<ul class="actions">
+			<!--<ul class="actions">
 				<li><a href="#" class="button">Full Portfolio</a></li>
-			</ul>
+			</ul>-->
 		</section>
 
 		<!-- Three -->
