Cleaning up css, adding Red links to work section

--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
                      <h2 style="color:white; padding-bottom: 50px;">
                         Full-Stack Developer,<br> Teacher, Explorer
                      </h2>
-                     <a target="_blank" href="https://drive.google.com/file/d/155HY4my4mZl1IAD_-V7XuTdNIjqKEVki/view?usp=sharing">
+                     <a target="_blank"
+                        href="https://drive.google.com/file/d/155HY4my4mZl1IAD_-V7XuTdNIjqKEVki/view?usp=sharing">
 
-                  
-                     <!--<a href="assets/WillRankin_Resume.pdf" class="button" download>-->
+
+                        <!--<a href="assets/WillRankin_Resume.pdf" class="button" download>-->
                         <i class="fas fa-file-pdf fa-sm"></i>
                         &nbsp;
                         Resume</a>
@@ -163,7 +164,8 @@
                <div class="titlepage">
                   <h2>See My Work</h2>
                   <span>Software developer turned traveler and teacher, eager to return to coding and development. <br>
-                      I may have been out of the game for a while, but here are some things I've built/been building: </span>
+                     I may have been out of the game for a while, but here are some things I've built/been building:
+                  </span>
                </div>
             </div>
          </div>
@@ -174,19 +176,20 @@
             <div class="col-md-6">
                <div class="our_work">
                   <figure>
-                     <a href="https://storage.googleapis.com/commentwriter/index.html" class="image fit thumb"
-                        target="_blank">
-                        <img src="images/recent_work/commentwriter_color.png" alt="#"/>
+                     <a href="https://storage.googleapis.com/commentwriter/index.html" target="_blank">
+                        <img src="images/recent_work/commentwriter_color.png" alt="#" />
                      </a>
                   </figure>
                </div>
-               <h3>Student Comment Writer - 2021</h3>
-               <p>Created a simple comment writing app (mostly out of frustration) to increase quarterly reporting speed
+               <a href="https://storage.googleapis.com/commentwriter/index.html" target="_blank" class="work_link">
+                  <h3>Student Comment Writer - 2021</h3>
+               </a>
+               <p>Created an intuitive comment writing application to increase quarterly reporting speed
                   for teachers by up to 50%</p>
                <br>
                <h3>Technology Used</h3>
                <p>
-                  jQuery | Bootstrap | <a href="https://cloud.google.com" target="_blank">Google Cloud</a> | HTML | CSS
+                  jQuery | Bootstrap | <a href="https://cloud.google.com" target="_blank" class="work_link">Google Cloud</a> | HTML | CSS
                </p>
                <br>
                <br>
@@ -194,13 +197,13 @@
             <div class="col-md-6">
                <div class="our_work">
                   <figure>
-                     <a href="https://www.oemheaters.com/configurators/sr/config.aspx" class="image fit thumb"
-                        target="_blank">
+                     <a href="https://www.oemheaters.com/configurators/sr/config.aspx" target="_blank">
                         <img src="images/recent_work/oemheaters_color.png" alt="#" /></a>
                   </figure>
                </div>
-
-               <h3>Custom Product Creator App - 2015</h3>
+               <a href="https://www.oemheaters.com/configurators/sr/config.aspx" target="_blank" class="work_link">
+                  <h3>Custom Product Creator App - 2015</h3>
+               </a>
                <p>Created jQuery apps that allowed users to create custom products, which increased sales and created
                   leads.</p>
                <br>
@@ -219,11 +222,13 @@
             <div class="col-md-6">
                <div class="our_work">
                   <figure>
-                     <a href="https://funway.co.kr" class="image fit thumb" target="_blank">
+                     <a href="https://funway.co.kr" target="_blank">
                         <img src="images/recent_work/funway_color.png" alt="#" /></a>
-                     </figure>
+                  </figure>
                </div>
-               <h3>English Academy Website - 2022</h3>
+               <a href="https://funway.co.kr" target="_blank" class="work_link">
+                  <h3>English Academy Website - 2022</h3>
+               </a>
                <p>
                   Worked with business owner to design and create a website using a full-service builder. This led to an
                   increase in recruitment.
@@ -231,7 +236,7 @@
                <br>
                <h3>Technology Used</h3>
                <p>
-                  <a href="https://creatorlink.com" target="_blank">CreatorLink</a> | HTML | CSS
+                  <a href="https://creatorlink.com" target="_blank" class="work_link">CreatorLink</a> | HTML | CSS
                </p>
                <br>
                <br>
@@ -242,11 +247,14 @@
                      <!--<button onclick="sendPostRequest()">
                            <img src="images/recent_work/funwaycity_color.png" alt="#" />
                      </button>-->
-                     <a href="https://www.funwaycity.com/" class="image fit thumb" target="_blank">
+                     <a href="https://www.funwaycity.com/" target="_blank">
                         <img src="images/recent_work/funwaycity_color.png" alt="#" /></a>
                   </figure>
                </div>
-               <h3>English Academy Student Dashboard - 2023</h3>
+               <a href="https://www.funwaycity.com/" target="_blank" class="work_link">
+                  <h3>English Academy Student Dashboard - 2023</h3>
+               </a>
+
                <p>Utilized Wix and Wix Velo to create a dashboard for students and parents to track progress in an
                   intuitive responsive design.</p>
                <br>
@@ -254,7 +262,7 @@
                <br>
                <h3>Technology Used</h3>
                <p>
-                  <a href="https://wix.com" target="_blank">Wix</a> | Wix Velo | Javascript | HTML | CSS
+                  <a href="https://wix.com" target="_blank" class="work_link">Wix</a> | Wix Velo | Javascript | HTML | CSS
                </p>
                <br>
                <br>
@@ -314,33 +322,34 @@
                <div class="col-md-7">
                   <form method="post" id="contact-form">
                      <div class="row">
-                         <div class="col-6 col-12-xsmall">
-                             <div class="form-group">
-                                 <input type="text" class="form-control" name="name" id="name" placeholder="Name" />
-                             </div>
-                         </div>
-                         <div class="col-6 col-12-xsmall">
-                             <div class="form-group">
-                                 <input type="email" class="form-control" name="email" id="email" placeholder="Email" />
-                             </div>
-                         </div>
-                         <div class="col-12">
-                             <div class="form-group">
-                                 <textarea class="form-control" name="message" id="message" placeholder="Message" rows="4"></textarea>
-                             </div>
-                         </div>
+                        <div class="col-6 col-12-xsmall">
+                           <div class="form-group">
+                              <input type="text" class="form-control" name="name" id="name" placeholder="Name" />
+                           </div>
+                        </div>
+                        <div class="col-6 col-12-xsmall">
+                           <div class="form-group">
+                              <input type="email" class="form-control" name="email" id="email" placeholder="Email" />
+                           </div>
+                        </div>
+                        <div class="col-12">
+                           <div class="form-group">
+                              <textarea class="form-control" name="message" id="message" placeholder="Message"
+                                 rows="4"></textarea>
+                           </div>
+                        </div>
                      </div>
                      <br>
                      <div class="row">
-                         <div class="col-12">
-                             <ul class="actions text-bg">
-                                 <li>
-                                     <input id="submit-button" type="submit" class="" value="Send" />
-                                 </li>
-                             </ul>
-                         </div>
+                        <div class="col-12">
+                           <ul class="actions text-bg">
+                              <li>
+                                 <input id="submit-button" type="submit" class="" value="Send" />
+                              </li>
+                           </ul>
+                        </div>
                      </div>
-                 </form>
+                  </form>
                </div>
             </div>
          </div>
@@ -363,34 +372,34 @@
    <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
    <script src="js/custom.js"></script>
    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-	<script>
-	  (function() {
-		emailjs.init("_hi0eg09Dya9qi5rF"); // Replace with your public key
-  
-		const contactForm = document.getElementById("contact-form");
-		const submitButton = document.getElementById("submit-button");
-  
-		contactForm.addEventListener("submit", function(event) {
-		  event.preventDefault();
+   <script>
+      (function () {
+         emailjs.init("_hi0eg09Dya9qi5rF"); // Replace with your public key
 
-		  // Disable the submit button
-		  submitButton.setAttribute("disabled", "true");
-		  
-		  emailjs.sendForm("service_67u8idz", "template_nxeee59", contactForm)
-			.then(function(response) {
-			  console.log("Email sent successfully:", response);
-			  alert("Email sent successfully!");
-			}, function(error) {
-			  console.error("Error sending email:", error);
-			  alert("Error sending email.");
-			})
-			.finally(function() {
-            	// Re-enable the submit button
-            	submitButton.removeAttribute("disabled");
-          	});
-		});
-	  })();
-	</script>
+         const contactForm = document.getElementById("contact-form");
+         const submitButton = document.getElementById("submit-button");
+
+         contactForm.addEventListener("submit", function (event) {
+            event.preventDefault();
+
+            // Disable the submit button
+            submitButton.setAttribute("disabled", "true");
+
+            emailjs.sendForm("service_67u8idz", "template_nxeee59", contactForm)
+               .then(function (response) {
+                  console.log("Email sent successfully:", response);
+                  alert("Email sent successfully!");
+               }, function (error) {
+                  console.error("Error sending email:", error);
+                  alert("Error sending email.");
+               })
+               .finally(function () {
+                  // Re-enable the submit button
+                  submitButton.removeAttribute("disabled");
+               });
+         });
+      })();
+   </script>
 </body>
 
 </html>
