adding animations/analytics

--- a/index.html
+++ b/index.html
@@ -32,14 +32,10 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
 </head>
 <!-- body -->
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9B5H5SG5XQ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-9B5H5SG5XQ');
-</script>
+<a title="GDPR-compliant Web Analytics" href="https://clicky.com/101452607">
+   <img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+<script async data-id="101452607" src="//static.getclicky.com/js"></script>
+
 
 
 <body class="main-layout">
@@ -90,6 +86,12 @@
    <!-- end header -->
    <!-- banner -->
    <section class="banner_main">
+      <div id="cylinder1" class="cylinder">
+      </div>
+      <div id="cylinder2" class="cylinder">
+      </div>
+      <div id="cylinder3" class="cylinder">
+      </div>
       <div class="container-fluid">
          <div class="row d_flex">
             <div class="col-md-7">
@@ -101,6 +103,11 @@
                      <h2 style="color:white; padding-bottom: 50px;">
                         Full-Stack Developer,<br> Teacher, Explorer
                      </h2>
+                     <p>
+                        Software developer turned traveler and teacher, eager to return to coding and development. <br>
+                        If you'd like to collaborate, please send me an email or reach out on any of my social handles.
+                     </p>
+                     <br>
                      <a target="_blank"
                         href="https://drive.google.com/file/d/155HY4my4mZl1IAD_-V7XuTdNIjqKEVki/view?usp=sharing">
 
@@ -114,7 +121,12 @@
             </div>
             <div class="col-md-5 bah">
                <div class="bann_img">
-                  <figure><img src="images/bann_img edit.png" alt="#" /></figure>
+                  <img class="triangle" src="images/triangle of justice.png" alt="#" />
+                  <figure>
+                     <img src="images/notriangle.png" alt="#" />
+                     
+                  </figure>
+                  
                </div>
             </div>
          </div>
@@ -168,16 +180,6 @@
    <!-- work -->
    <div id="work" class="work">
       <div class="container">
-         <div class="row">
-            <div class="col-md-12">
-               <div class="titlepage">
-                  <h2>See My Work</h2>
-                  <span>Software developer turned traveler and teacher, eager to return to coding and development. <br>
-                     I may have been out of the game for a while, but here are some things I've built/been building:
-                  </span>
-               </div>
-            </div>
-         </div>
          <div class="titlepage">
             <h3>Apps</h3>
          </div>
