typeit + scroll to top

--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
 
 
 <body class="main-layout">
-   <!-- loader  -->
+   <!-- loader  
    <div class="loader_bg">
       <div class="loader"><img src="images/loading.gif" alt="#" /></div>
    </div>
-   <!-- end loader -->
+   end loader -->
+
    <!-- header -->
    <header>
       <!-- header inner -->
@@ -92,26 +93,30 @@
       </div>
       <div id="cylinder3" class="cylinder">
       </div>
+      <div id="back-to-top" style="display: none;">
+         <img alt="back to top" src="images/trianglecropped.png"/>
+      </div>
       <div class="container-fluid">
          <div class="row d_flex">
             <div class="col-md-7">
                <div class="text-bg">
                   <div class="padding_lert titlepage" style="text-align: left; padding:10px">
 
-                     <h1>
-                        I am Will Rankin </h1>
-                     <h2 style="color:white; padding-bottom: 50px;">
+                     <h1 class="typeIt">
+                        Will Rankin 
+                     </h1>
+                     <h2 class="typeIt" style="color:white; padding-bottom: 50px;">
                         Full-Stack Developer,<br> Teacher, Explorer
                      </h2>
                      <div class="multipurpose">
                         <p>
                            Software developer turned traveler, eager to return to development. <br>
-                           If you'd like to collaborate, please send me an email or reach out via my socials!
+                           If you'd like to collaborate, please send me an email or reach out via <a class="work_link" href="mailto:wrankin1101@gmail.com">email</a> or socials!
                         </p>
                      </div>
                      
                      <br>
-                     <a target="_blank"
+                     <a target="_blank" class="big-button"
                         href="https://drive.google.com/file/d/155HY4my4mZl1IAD_-V7XuTdNIjqKEVki/view?usp=sharing">
 
 
@@ -349,7 +354,7 @@
                         <div class="col-12">
                            <ul class="actions text-bg">
                               <li>
-                                 <input id="submit-button" type="submit" class="" value="Send" />
+                                 <input id="submit-button" type="submit" class="big-button" value="Send" />
                               </li>
                            </ul>
                         </div>
