--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                      <h1 class="typeIt">
                         Will Rankin 
                      </h1>
-                     <h2 class="typeItLoop" style="color:white; padding-bottom: 30px;">
+                     <h2 class="typeItLoop" style="color:white; margin-bottom: 30px; min-height: 110px;">
                         Full-Stack Developer, Teacher, Explorer
                      </h2>
                      <div class="multipurpose">
