fix triangle clipping

--- a/index.html
+++ b/index.html
@@ -143,10 +143,11 @@
             </div>
             <div class="col-md-4 m-5 bah">
                <div class="bann_img">
-                  <img class="triangle" src="images/triangle of justice.png" alt="#" />
+                  <div class="triangle">
+                     <img src="images/triangle of justice_skinny.png" alt="#" />   
+                  </div>
                   <figure>
                      <img src="images/notriangle.png" alt="#" />
-                     
                   </figure>
                   
                </div>
