reactifying html + css

--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,75 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <title>Will Rankin</title>
+    <meta name="keywords" content="react.js portfolio developer">
+    <meta name="description" content="Will Rankin's portfolio built in React.js">
+    <meta name="author" content="Will Rankin">
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles/fontawesome-all.min.css">
+    <!-- Responsive-->
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles/responsive.css">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Tweaks for older IEs-->
+   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+   <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-32x32.png">
+
   </head>
-  <body>
+  <body class="main-layout">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <a title="GDPR-compliant Web Analytics" href="https://clicky.com/101452607">
+      <img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+    <script async data-id="101452607" src="//static.getclicky.com/js"></script>
+   
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    
+    <!-- Javascript files-->
+   <script src="%PUBLIC_URL%/scripts/jquery.min.js"></script>
+   <script src="%PUBLIC_URL%/scripts/bootstrap.bundle.min.js"></script>
+   <script src="%PUBLIC_URL%/scripts/jquery-3.0.0.min.js"></script>
+   <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+   <script>
+      (function () {
+         emailjs.init("_hi0eg09Dya9qi5rF"); // Replace with your public key
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+         const contactForm = document.getElementById("contact-form");
+         const submitButton = document.getElementById("submit-button");
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+         contactForm.addEventListener("submit", function (event) {
+            event.preventDefault();
+
+            // Disable the submit button
+            submitButton.setAttribute("disabled", "true");
+
+            emailjs.sendForm("service_67u8idz", "template_nxeee59", contactForm)
+               .then(function (response) {
+                  console.log("Email sent successfully:", response);
+                  alert("Email sent successfully!");
+               }, function (error) {
+                  console.error("Error sending email:", error);
+                  alert("Error sending email.");
+               })
+               .finally(function () {
+                  // Re-enable the submit button
+                  submitButton.removeAttribute("disabled");
+               });
+         });
+      })();
+   </script>
   </body>
 </html>
